--- a/src/blocks/airdatepicker/airdatepicker.pug
+++ b/src/blocks/airdatepicker/airdatepicker.pug
@@ -1,16 +1,18 @@
 div.flex-wrap
-    input(type="text"
-        data-range="true"
-        data-multiple-dates-separator=" - " 
-        class="dateRange range"
-        class="datepicker-here"
-        id="startDate"
-        placeholder="ДД.ММ.ГГ")
-
-    input(type="text"
-        class="range"
-        id="endDate"
-         placeholder="ДД.ММ.ГГ")
+    div.arrow__wrapper
+        input(type="text"
+            data-range="true"
+            data-multiple-dates-separator=" - " 
+            class="dateRange range"
+            class="datepicker-here"
+            id="startDate"
+            placeholder="ДД.ММ.ГГ")
+            
+    div.arrow__wrapper
+        input(type="text"
+            class="range"
+            id="endDate"
+            placeholder="ДД.ММ.ГГ")
 
 //- input(type='text' class="datepickerWrap" id='start' data-range="true"
 //-     data-multiple-dates-separator=" - "
