--- a/src/blocks/dropdown/dropdown.pug
+++ b/src/blocks/dropdown/dropdown.pug
@@ -1,5 +1,5 @@
 label.dropdowns
-  .dd-button(id="dd-text")  Сколько гостей
+  input(class="dd-button" id="dd-text" placeholder="Сколько гостей")
   input(type="checkbox" class="dd-input" id="test")
   ul(class="dd-menu")
     li()
