--- a/src/components/mixins.scss
+++ b/src/components/mixins.scss
@@ -1,20 +1,13 @@
-@mixin logo {
-  background-image: url(../images/Logo.svg);
-  background-repeat: no-repeat;
-  width: 140px;
-  height: 55px;
-  margin-top: 5px;
-}
 
 @mixin input_text {
-  width: 320px;
+  width: 35
+  0px;
   height: 44px;
   background: #ffffff;
   border: 1px solid rgba(31, 32, 65, 0.25);
   box-sizing: border-box;
   border-radius: 4px;
   &::placeholder {
-    font-family: "Open Sans";
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
@@ -47,16 +40,7 @@
   text-decoration: none;
 }
 
-@mixin btn-link {
-  display: inline-block;
-  padding: 15px 30px;
-  border: 2.4px solid $violet-text;
-  text-transform: uppercase;
-  border-radius: 30px;
-  color: $violet-text;
-  text-decoration: none;
-  font-family: "OpenSans-Bold";
-}
+
 
 @mixin btn-violet {
   border: none;
@@ -96,10 +80,9 @@
 }
 
 @mixin text {
-  font-family: "OpenSans-Bold";
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
+  font-size: 20px;
   letter-spacing: 0;
 }
 
