--- a/src/components/room-page/room-page.scss
+++ b/src/components/room-page/room-page.scss
@@ -169,6 +169,16 @@ div.room-card__decor{
 
 .fa-arrow-left{
   font-size: 30px;
+  color: #6fcf97;
+}
+
+.settings__datepicker{
+  margin-top: 10px;
+  margin-bottom: 40px;
+}
+.right-side .fa-arrow-right{
+  font-size: 30px;
+  color: #6fcf97;
 }
 @media only screen and (max-width: 900px) {
   #left-side{
