--- a/src/components/signin-form/signin-form.pug
+++ b/src/components/signin-form/signin-form.pug
@@ -8,7 +8,7 @@
         input(class="input_text input__signin" placeholder="Email")
         input(class="input_text input__signin input__signin--second" placeholder="Пароль")
 
-        button(type="button" class="btn btn-width-violet btn__signin") Войти
+        button(type="button" class="btn  btn-confirm btn__signin") Войти
         
         .display__flex
           div(class="text text__signin") Нет аккаунта на Toxin?
