--- a/src/blocks/airdatepicker/airdatepicker.scss
+++ b/src/blocks/airdatepicker/airdatepicker.scss
@@ -3,46 +3,74 @@
     justify-content: space-between;
 }
 
+.arrow__wrapper{
+  position: relative;
+  display: inline-block;
+}
+.arrow__wrapper::before{
+  position: absolute;
+  top: 25%;
+  left: 80%;
+  content: "";
+  padding: 5px;
+  //   //set tickness
+  box-shadow: 2px -2px 0 0 $black-text inset;
+  display: inline-block;
+  transform: rotate(-45deg);
+  margin-left: 10px;
+  color: $black-text;
+}
+
+#single__input__range{
+  width: 395px;
+  height: 65px;
+  border: 1px solid rgba(31, 32, 65, 0.25);
+  box-sizing: border-box;
+  border-radius: 4px;
+  font-size: 18px;
+  padding-left: 20px;
+}
+
 .range{
-    width: 195px;
-    height: 50px;
+    width: 220px;
+    height: 65px;
     border-radius: 4px;
     margin-bottom: 30px;
     outline: none;
     border: none;
     border: 1px solid rgba(31, 32, 65, 0.25);
+    padding-left: 20px;
     &::placeholder {
         font-style: normal;
         font-weight: normal;
         font-size: 18px;
         line-height: 18px;
         color: $color-standart;
-        padding-left: 10px;
       }
 }
 
 
 
-@media only screen and (max-width: 600px) {
-  .range{
-    width: 175px;
-    height: 40px;
-    border-radius: 4px;
-    margin-bottom: 30px;
-    outline: none;
-    border: none;
-    border: 1px solid rgba(31, 32, 65, 0.25);
-    &::placeholder {
-        font-style: normal;
-        font-weight: normal;
-        font-size: 16px;
-        line-height: 18px;
-        color: $color-standart;
-        padding-left: 10px;
-      }
-}
+// @media only screen and (max-width: 600px) {
+//   .range{
+//     width: 175px;
+//     height: 40px;
+//     border-radius: 4px;
+//     margin-bottom: 30px;
+//     outline: none;
+//     border: none;
+//     border: 1px solid rgba(31, 32, 65, 0.25);
+//     &::placeholder {
+//         font-style: normal;
+//         font-weight: normal;
+//         font-size: 16px;
+//         line-height: 18px;
+//         color: $color-standart;
+//         padding-left: 10px;
+//       }
+// }
 
-}
+// }
 .datepicker--pointer {
     display: none!important;
 }
@@ -138,7 +166,11 @@
       color: #fff;
       border: none;
       background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-     border-radius: 50%; }
+     border-radius: 50%; 
+    &::before{
+      
+    }}
+
       .datepicker--cell.-selected-.-current- {
         color: #fff;
         background: #5cc4ef; }
@@ -235,7 +267,7 @@
     font-style: normal;
     font-size: 18px;
     color: #1F2041;
-    width: 420px;
+    width: 475px;
     position: absolute;
     left: -100000px;
     opacity: 0;
