--- a/src/blocks/calculator/calculator.pug
+++ b/src/blocks/calculator/calculator.pug
@@ -26,7 +26,7 @@
                     | услуги
                 p 300P
             p(class="calculator__total") Итого....................................................................38 081₽
-            button(type="button" class="btn btn-width-violet") Забронировать
+            button(type="button" class="btn btn-confirm") Забронировать
             
 
 
