--- a/src/blocks/slick/slick.scss
+++ b/src/blocks/slick/slick.scss
@@ -169,7 +169,7 @@
 		padding: 0;
 		list-style-type: none;
 		width: 100%;
-		height: 300px;
+		min-height: 305px;
 		position: relative;
 	  }
   
@@ -186,6 +186,7 @@
   
 		img {
 		  width: 400px;
+		  height: 325px;
 		  vertical-align: middle;
 		}
 	  }
@@ -256,20 +257,21 @@
   
 	  &__nav {
 		margin-top: -120px;
-		margin-left: 120px;
+		padding-bottom: 20px;
+		margin-left: 140px;
 		position: relative;
 		text-align: center;
 		width: 100%;
 		z-index: 3;
   
 		> label {
-		  border: 1px solid #fff;
+		  border: 2px solid #fff;
 		  display: inline-block;
 		  border-radius: 50%;
 		  cursor: pointer;
-		  margin: 0 .125%;
-		  width: 10px;
-		  height: 10px;
+		  margin: 0 .500%;
+		  width: 12px;
+		  height: 12px;
 		}
 	  }
 	}
