--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -4,33 +4,33 @@
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
   border-radius: 7px;
   margin: 20px 0;
-  & img {
-    width: 100%;
-    height: 200px;
-    background-color: red;
-    border-top-left-radius: 7px;
-    border-top-right-radius: 7px;
-  }
+  // & img {
+  //   width: 100%;
+  //   background-color: red;
+  //   border-top-left-radius: 7px;
+  //   border-top-right-radius: 7px;
+  // }
   &_container {
-    padding: 10px 20px;
+    padding: 25px 30px;
   }
   &-number {
     font-style: normal;
     font-weight: bold;
     font-size: 24px;
-    line-height: 17px;
+    margin-top: 5px;
     color: #1f2041;
   }
   &-price {
     font-style: normal;
     font-weight: bold;
-    font-size: 20px;
-    line-height: 18px;
+    font-size: 21px;
     color: rgba(31, 32, 65, 0.5);
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
   &-span {
     font-weight: normal;
-    font-size: 20px;
+    font-size: 18px;
   }
 }
 
@@ -55,8 +55,8 @@
 
 .Stars::before {
   content: "★★★★★";
-  font-size: 39px;
-  letter-spacing: 3px;
+  font-size: 34px;
+  letter-spacing: 7px;
   background: -webkit-gradient(
     linear,
     left top,
@@ -75,7 +75,7 @@
 }
 
 .stars__decor {
-  margin-top: 10px;
+  margin-top: 5px;
 }
 
 @media only screen and (max-width: 1550px) {
@@ -105,8 +105,6 @@
     &-price {
       font-style: normal;
       font-weight: bold;
-      font-size: 20px;
-      line-height: 18px;
       color: rgba(31, 32, 65, 0.5);
     }
     &-span {
