--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,6 +1,5 @@
 include ../mixins.pug
 footer
-  hr
   .footer.container
     .footer__nav
       .footer__nav__block
@@ -11,7 +10,7 @@ footer
             | отеле 2019 года по версии
             | ассоциации «Отельные взгляды»
       .footer__nav__block
-        h3(class="footer__block footer__title") Навигация
+        h3(class="footer__block subtitle") Навигация
         ul
           li 
             a О нас
@@ -22,7 +21,7 @@ footer
           li
             a Услуги
       .footer__nav__block
-        h3(class="footer__block footer__title") О нас
+        h3(class="footer__block subtitle") О нас
         ul
           li 
             a О сервисе
@@ -33,7 +32,7 @@ footer
           li 
             a Инвесторы
       .footer__nav__block
-        h3(class="footer__block footer__title") Служба поддержки
+        h3(class="footer__block subtitle") Служба поддержки
         ul
           li 
             a Соглашения
@@ -42,8 +41,8 @@ footer
           li
             a Связь с нами
       .footer__nav__block
-        h3(class="footer__block footer__title") Подписка
-        p(style='white-space:pre;' class="footer__title--describtion")
+        h3(class="footer__block subtitle") Подписка
+        p(style='white-space:pre;' class="subtitle--describtion")
           | Получайте специальные
           | предложения и новости сервиса
         +input-subscription("Email")
@@ -78,11 +77,11 @@ footer
               a(href="#")
                 svg(width="0" height="0")
                   radialGradient(id="rg" r="150%" cx="30%" cy="107%")
-                    stop(stop-color="##8BA4F9" offset="0")
+                    stop(stop-color="#8BA4F9" offset="0")
                     stop(stop-color="#8BA4F9" offset="0.05")
                     stop(stop-color="#8BA4F9" offset="0.45")
                     stop(stop-color="#8BA4F9" offset="0.6")
-                    stop(stop-color="#BC9CFF" offset="0.9")
+                    stop(stop-color="#8BA4F9" offset="0.9")
                 div.div
                   i(class="fab fa-instagram" aria-hidden="true")
             
