--- a/src/components/form-search/form-search.pug
+++ b/src/components/form-search/form-search.pug
@@ -22,5 +22,5 @@ include ../mixins.pug
       //-     input( type="text" name="end-date" id="end-date" placeholder="ДД.ММ.ГГГГ" class="input-date")
         
       a(href="filter-page.html")
-         button(type="button" class="btn btn-width-violet form__search__btn") подобрать номер
+         button(type="button" class="btn  btn-confirm form__search__btn") подобрать номер
       
