--- a/src/components/form-search/form-search.scss
+++ b/src/components/form-search/form-search.scss
@@ -59,46 +59,42 @@ border-radius: 4px;
 }
 
 .form-search{
-  width: 510px;
-  height: 511px;
+  width: 560px;
+  height: 531px;
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.12);
   box-sizing: border-box;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
   border-radius: 7px;
   margin-left: 180px;
+  padding: 30px 40px;
 }
-
-.container-form{
-  padding: 30px 10px 0 5px;
-};
 
 .form-search__label{
   font-family: "Montserrat";
   font-style: normal;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 15px;
   text-transform: uppercase;
   text-decoration: none;
   padding-bottom: 10px;
-  margin-left: 7px;
   margin-top: 10px;
 }
 
 .form-search__label-arrival{
-    padding-right: 123px;
+    padding-right: 140px;
 }
 
 .form-search__label-guests{
-  padding-top: 20px;
+  padding-top: 30px;
 }
 
 .form__search__btn{
   margin-left: 10px;
 }
-.wrapper-search{
-  margin-left: auto;
-  margin-right: auto;
-  width: 450px;
-}
+// .wrapper-search{
+//   margin-left: auto;
+//   margin-right: auto;
+//   width: 450px;
+// }
