--- a/src/components/signin-form/signin-form.scss
+++ b/src/components/signin-form/signin-form.scss
@@ -7,6 +7,7 @@
 
 .input__signin {
   margin-top: 8px;
+  margin-bottom: 3px;
 }
 
 .input__signin--second {
@@ -19,12 +20,12 @@
 
 .text {
   font-family: "OpenSans-Bold";
-  font-size: 14px;
+  font-size: 16px;
   line-height: 18px;
 }
 
 .text__signin{
-    margin-top: 62px;
+    margin-top: 65px;
 }
 
 .btn__create{
