--- a/src/components/signup-page/signup-page.scss
+++ b/src/components/signup-page/signup-page.scss
@@ -1,9 +1,10 @@
 .main-background{
-    min-height: 1000px;
+    min-height: 1010px;
     background-image: url(../images/bg_in.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    padding-top: 220px;
+    background-position: center;
+    padding-top: 240px;
     width: 100%;
 }
 
