--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -29,11 +29,19 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+p {
+  display: block;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
 .material-icons {
   font-family: 'MaterialIcons';
   font-weight: normal;
   font-style: normal;
-  font-size: 64px;  /* Preferred icon size */
+  font-size: 65px;  /* Preferred icon size */
   display: inline-block;
   line-height: 1;
   text-transform: none;
@@ -60,7 +68,7 @@ body {
 }
 
 .container {
-  width: 82vw;
+  width: 80.5vw;
   margin: 0 auto;
 }
 
@@ -71,7 +79,10 @@ body {
 }
 
 .logo {
-  @include logo;
+  background-image: url(../images/Logo.svg);
+  background-repeat: no-repeat;
+  width: 210px; height: 60px;
+  margin-top: 5px;
 }
 
 .title__main {
@@ -94,19 +105,24 @@ a {
   text-decoration: none;
 }
 
+hr{
+  background: rgba(31, 32, 65, 0.1);
+  height: 1.5px;
+}
+
 .input_text {
   @include input_text;
 }
 
-.btn-width-violet {
-  width: 426px;
-  height: 56px;
+.btn-confirm {
+  width: 472px;
+  height: 65px;
   background-color: #bc9cff;
   border-radius: 45px;
   border: none;
   box-sizing: border-box;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 15px;
   /* identical to box height */
   font-family: "OpenSans-Bold";
@@ -124,7 +140,26 @@ a {
 }
 
 .btn-link {
-  @include btn-link;
+  display: inline-block;
+  padding: 17px 27px;
+  border: 2.4px solid $violet-text;
+  text-transform: uppercase;
+  border-radius: 30px;
+  font-size: 19px;
+  color: $violet-text;
+  text-decoration: none;
+  font-family: "OpenSans-Bold";
+}
+
+.subtitle {
+  font-size: 18px;
+  font-family: "Montserrat";
+  text-transform: uppercase;
+  margin-block-start: 0.7em;
+  &--describtion {
+    margin-top: 25px;
+    margin-bottom: 29px;
+  }
 }
 
 .label {
@@ -151,85 +186,53 @@ a {
   flex-direction: row;
 }
 
-.radio-button {
-  & ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    overflow: auto;
-    display: flex;
-    flex-direction: row;
-    & li {
-      color: #aaaaaa;
-      display: block;
-      position: relative;
-      float: left;
-      & .check {
-        display: block;
-        position: absolute;
+.radio {
+  margin: 0.5rem;
+  input[type="radio"] {
+    position: absolute;
+    opacity: 0;
+    + .radio-label {
+      &:before {
+        content: '';
+        background: #fff;
         border-radius: 100%;
-        height: 25px;
-        width: 25px;
-        top: 30px;
-        z-index: 5;
-        transition: border 0.25s linear;
-        -webkit-transition: border 0.25s linear;
-        border: $border-state;
-        &::before {
-          display: block;
-          position: absolute;
-          content: "";
-          border-radius: 100%;
-          height: 14px;
-          width: 14px;
-          top: 4.5px;
-          left: 4px;
-          margin: auto;
-          transition: background 0.25s linear;
-          -webkit-transition: background 0.25s linear;
+        border: 1px solid #BC9CFF;
+        display: inline-block;
+        width: 1.4em;
+        height: 1.4em;
+        position: relative;
+        top: -0.2em;
+        margin-right: 1em; 
+        vertical-align: top;
+        cursor: pointer;
+        text-align: center;
+        transition: all 250ms ease;
+      }
+    }
+    &:checked {
+      + .radio-label {
+        &:before {
+          background:   linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+          box-shadow: inset 0 0 0 4px #fff;
         }
       }
-      & input[type="radio"] {
-        position: absolute;
-        visibility: hidden;
+    }
+    &:focus {
+      + .radio-label {
+        &:before {
+          outline: none;
+          border-color: #fff;
+        }
       }
-      & label {
-        display: block;
-        position: relative;
-        font-size: 24px;
-        line-height: 24px;
-        padding: 21px 10px 25px 30px;
-        margin: 10px auto;
-        height: 30px;
-        z-index: 9;
-        cursor: pointer;
-        -webkit-transition: all 0.25s linear;
-        font-weight: normal;
-        font-size: 18px;
-        line-height: 24px;
+    }
+    + .radio-label {
+      &:empty {
+        &:before {
+          margin-right: 0;
+        }
       }
     }
   }
-}
-
-.radio-button ul li:hover label {
-  color: rgba(31, 32, 65, 0.5);
-}
-
-.radio-button ul li:hover .check {
-  border: 3px solid #bc9cff;
-}
-
-.radio-button input[type="radio"]:checked ~ .check {
-  border: 1px solid #bc9cff;
-}
-
-.radio-button input[type="radio"]:checked ~ .check::before {
-  background: #bc9cff;
-}
-
-.radio-button input[type="radio"]:checked ~ label {
-  color: rgba(31, 32, 65, 0.75);
 }
 
 .input-date {
@@ -251,36 +254,37 @@ a {
   }
 }
 
-@media only screen and (max-width: 600px) {
-  .title__main {
-    font-size: 18px;
-    text-align: center;
-  }
 
-  .btn-width-violet {
-    width: 310px;
-    height: 40px;
-    background-color: #bc9cff;
-    border-radius: 45px;
-    margin-left: 40px;
-    text-align: center;
-    box-sizing: border-box;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 15px;
-    /* identical to box height */
-    font-family: "OpenSans-Bold";
-    text-align: center;
-    text-transform: uppercase;
-    color: #ffffff;
-    background-image: url(../images/white-arrow.svg);
-    background-repeat: no-repeat;
-    background-position-x: 24em;
-    background-position-y: 1.2em;
-    top: 20px;
-    &:focus{
-      outline: none;
-    }
-  }
+@media only screen and (max-width: 600px) {
+  // .title__main {
+  //   font-size: 20px;
+  //   text-align: center;
+  // }
+
+  // .btn-width-violet {
+  //   width: 310px;
+  //   height: 40px;
+  //   background-color: #bc9cff;
+  //   border-radius: 45px;
+  //   margin-left: 40px;
+  //   text-align: center;
+  //   box-sizing: border-box;
+  //   font-weight: bold;
+  //   font-size: 14px;
+  //   line-height: 15px;
+  //   /* identical to box height */
+  //   font-family: "OpenSans-Bold";
+  //   text-align: center;
+  //   text-transform: uppercase;
+  //   color: #ffffff;
+  //   background-image: url(../images/white-arrow.svg);
+  //   background-repeat: no-repeat;
+  //   background-position-x: 24em;
+  //   background-position-y: 1.2em;
+  //   top: 20px;
+  //   &:focus{
+  //     outline: none;
+  //   }
+  // }
   
 }
